BGE:: Motion Actuator:: The code for Force apparently overwritten with code for LinV #46902

Closed
opened 2015-12-01 01:02:58 +01:00 by Adam Friesen · 9 comments

System Information
Win7 64 bit, 16 GB RAM, an AMD 7xxx GPU, third gen i7 processor

Blender Version
Broken: hash 254282c
Worked: hash 83a36b2 (buildbot build done 4th of September)

Short description of error
Force movement is now behaving like LinV as opposed to actual force, could've been an error introduced when cleaning or pasting code

Exact steps for others to reproduce the error
Open the .blend and press 'P'.

.blend
Bug.blend

**System Information** Win7 64 bit, 16 GB RAM, an AMD 7xxx GPU, third gen i7 processor **Blender Version** Broken: hash 254282c Worked: hash 83a36b2 (buildbot build done 4th of September) **Short description of error** Force movement is now behaving like LinV as opposed to actual force, could've been an error introduced when cleaning or pasting code **Exact steps for others to reproduce the error** Open the .blend and press 'P'. **.blend** [Bug.blend](https://archive.blender.org/developer/F261685/Bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

#47208 was marked as duplicate of this issue

#47208 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscribers: @dr.sybren, @panzergame, @hg1, @Moguri

Added subscribers: @dr.sybren, @panzergame, @hg1, @Moguri

This is caused by D1545, which allows setting the velocity to zero. Until we fix this, you can work around this by enabling "Add" for the linear velocity. That way it doesn't set it to 0, but just adds 0 and doesn't influence the velocity.

This is caused by [D1545](https://archive.blender.org/developer/D1545), which allows setting the velocity to zero. Until we fix this, you can work around this by enabling "Add" for the linear velocity. That way it doesn't set it to 0, but just adds 0 and doesn't influence the velocity.
Sybren A. Stüvel self-assigned this 2015-12-02 09:39:10 +01:00

Added subscribers: @you.le, @Blendify, @mont29, @alabd14313

Added subscribers: @you.le, @Blendify, @mont29, @alabd14313

This issue was referenced by 83c9109926

This issue was referenced by 83c9109926677b6b6a75ccb36ae0017733e8c8a2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46902
No description provided.