UPBGE: Fix T46902: motion actuator apply zero velocity anyways.

Previously even if there're a force or torque, the velocity was applied. To solve this the code check before appling velocity if there's a no force
for linear velocity and no torque for angular velocity.